--- a/views/islands.ejs
+++ b/views/islands.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title><%= type.charAt(0).toUpperCase() + type.slice(1) %> Destinations</title>
+    <title>Islands Destinations</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <style>
@@ -31,11 +31,26 @@
             background-color: rgba(0, 0, 0, 0.7);
             color: white;
         }
+
+.card-title {
+    font-size: 1.25rem;
+    font-weight: bold;
+    color: #bfff9f; /* Light green for titles */
+}
+
+.card-text {
+    color: #ddd; /* Light gray for descriptions */
+}
+
+.card-img-top {
+    height: 200px;
+    object-fit: cover; /* Ensures uniform image size */
+}
     </style>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-2">
-        <a class="navbar-brand"><%= type.charAt(0).toUpperCase() + type.slice(1) %> Destinations</a>
+        <a class="navbar-brand">Islands Destinations</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -43,7 +58,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto"></ul>
             <form method="POST" action='/search' class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" name="Search" type="search" placeholder="Search"
+                <input class="form-control mr-sm-2" name="searchKey" type="search" placeholder="Search"
                     aria-label="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
             </form>
@@ -62,5 +77,50 @@
             </div>
         <% }) %>
     </div>
+    <div id="results" class="container mt-4">
+        <h3 class="text-white">Search Results:</h3>
+        <div id="search-results" class="row">
+            <!-- Search results will be appended here -->
+        </div>
+    </div>
+
+    <script>
+        const form = document.querySelector("form");
+        form.addEventListener("submit", async (e) => {
+            e.preventDefault();
+
+            const searchKey = form.searchKey.value;
+            const response = await fetch('/search', {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify({ searchKey })
+            });
+
+            const data = await response.json();
+
+            const resultsContainer = document.getElementById("search-results");
+            resultsContainer.innerHTML = ""; // Clear previous results
+
+            if (response.ok) {
+                data.destinations.forEach(destination => {
+                    const card = `
+                        <div class="col-md-4 mb-3">
+                            <div class="card bg-dark text-white">
+                                <img src="${destination.image}" class="card-img-top" alt="${destination.name}">
+                                <div class="card-body">
+                                    <h5 class="card-title">${destination.name}</h5>
+                                    <p class="card-text">${destination.description}</p>
+                                    <button onclick="location.href='/${destination.name}';" class="btn btn-secondary">View</button>
+                                </div>
+                            </div>
+                        </div>
+                    `;
+                    resultsContainer.insertAdjacentHTML("beforeend", card);
+                });
+            } else {
+                resultsContainer.innerHTML = `<p class="text-danger">${data.error || 'Search failed.'}</p>`;
+            }
+        });
+    </script>
 </body>
 </html>
