--- a/views/paris.ejs
+++ b/views/paris.ejs
@@ -76,8 +76,8 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
             </ul>
-            <form method="POST" action='/search' class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" name="Search" type="search" placeholder="Search"
+            <form method="POST" id='searchForm' action='/search' class="form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2" name="searchKey" type="search" placeholder="Search"
                     aria-label="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
             </form>
