--- a/views/wanttogo.ejs
+++ b/views/wanttogo.ejs
@@ -5,96 +5,98 @@
         body {
             background-image: url("/background3.jpg");
             background-repeat: no-repeat;
-            background-size: 100%;
+            background-size: cover;
+            margin: 0;
+            padding: 0;
         }
 
         h1 {
             color: white;
             text-align: center;
             -webkit-text-stroke: 1px blue;
-        }
-
-        .card-container {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
             margin-top: 20px;
         }
 
+        .container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 20px;
+        }
+
         .card {
-            margin: 10px;
+            background-color: #2b2b2b;
+            border: 1px solid #444;
             width: 18rem;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            border-radius: 8px;
-            overflow: hidden;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+            transition: transform 0.2s;
         }
 
-        .card img {
-            height: 200px;
-            object-fit: cover;
-        }
-
-        .card-body {
-            padding: 15px;
+        .card:hover {
+            transform: scale(1.05);
         }
 
         .card-title {
             font-size: 1.25rem;
             font-weight: bold;
+            color: #bfff9f;
         }
 
         .card-text {
-            font-size: 1rem;
-            margin: 10px 0;
+            color: #ddd;
         }
 
-        .btn {
-            display: block;
-            width: 100%;
-            text-align: center;
+        .card-img-top {
+            height: 200px;
+            object-fit: cover;
+        }
+
+        .btn-block {
+            font-weight: bold;
         }
     </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Want-to-Go List</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-2">
         <a class="navbar-brand" style="color: rgb(191, 255, 161)">Want-to-Go List</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-            </ul>
-            <form method="POST" action='/search' class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" name="Search" type="search" placeholder="Search"
-                    aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
-        </div>
     </nav>
 
-    <h1>Destinations</h1>
-    <div class="card-container">
-        <% destinations.forEach(destination => { %>
-            <div class="card">
-                <img src="<%= destination.image %>" class="card-img-top" alt="<%= destination.name %>">
-                <div class="card-body">
-                    <h5 class="card-title"><%= destination.name %></h5>
-                    <p class="card-text"><%= destination.description %></p>
-                    <button onclick="location.href='/<%= destination.name %>';" class="btn btn-secondary">View</button>
-                </div>
-            </div>
-        <% }) %>
+    <div class="container search-results">
+        <% if (error) { %>
+            <p class="error-message"><%= error %></p>
+        <% } else { %>
+            <% if (results && results.length > 0) { %>
+                <% results.forEach(destination => { %>
+                    <div class="col-md-4 mb-3">
+                        <div class="card bg-dark text-white h-100">
+                            <img 
+                                src="<%= destination.name.toLowerCase() %>.png" 
+                                class="card-img-top" 
+                                alt="<%= destination.name %>" 
+                                onerror="this.src='/images/default.png';"
+                            >
+                            <div class="card-body d-flex flex-column">
+                                <h5 class="card-title"><%= destination.name %></h5>
+                                <p class="card-text"><%= destination.description %></p>
+                                <div class="mt-auto">
+                                    <form method="GET" action="/<%= encodeURIComponent(destination.name) %>" class="form-inline my-2 my-lg-0 mb-2">
+                                        <button class="btn btn-outline-success btn-block" type="submit">
+                                            Find More About <%= destination.name %>
+                                        </button>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                <% }); %>
+            <% } else { %>
+                <p>No destinations to show at the moment.</p>
+            <% } %>
+        <% } %>
     </div>
-
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGaZDqwOg6Kr5gV6M7027MwRPh" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIyVay1kMZrj9NOQs7t27z2xmE+kk/33p+jF52AR" crossorigin="anonymous"></script>
 </body>
 </html>
